--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.customButton{
+  width: 150px;
+    height: 50px;
+    letter-spacing: 0.5px;
+    background-color: gray;
+    color: white;
+    font-size: 32px;
+    border: 1.5px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.active{
+  background-color: rgb(0, 210, 0);
+  color: white;
+}
+
