--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,29 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #3568cf;
+  min-height: 6vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-body {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-footer {
+  background-color: #3568cf;
+  min-height: 6vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +56,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.customStyleForDiv{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
