--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* -moz-osx-font-smoothing: grayscale; */
 }
 
 code {
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-.customButton{
+/* .customButton{
   width: 150px;
     height: 50px;
     letter-spacing: 0.5px;
@@ -27,5 +27,6 @@ code {
 .active{
   background-color: rgb(0, 210, 0);
   color: white;
-}
+} */
+
 
