--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  /* -moz-osx-font-smoothing: grayscale; */
+  /* min-height:100vh; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-/* .customButton{
-  width: 150px;
-    height: 50px;
-    letter-spacing: 0.5px;
-    background-color: gray;
-    color: white;
-    font-size: 32px;
-    border: 1.5px solid gray;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.active{
-  background-color: rgb(0, 210, 0);
-  color: white;
-} */
-
-
