--- a/src/Component/Layout/MainContent.css
+++ b/src/Component/Layout/MainContent.css
@@ -33,3 +33,12 @@
     padding: 0;
   }
 }
+
+.activeMenu{
+  width: 100px;
+  border-style: solid;
+  background-color: #dd930c;
+  border-color: #dd930c;
+  color: white;
+  width: 100%;
+}
