show language list once user click on language link on browser

--- a/src/Component/Layout/header.css
+++ b/src/Component/Layout/header.css
@@ -17,3 +17,10 @@
 .nav-items > li {
     padding: 10px;
 }
+
+.toggleDisplayStyle {
+    position: absolute; 
+    margin-left: 1%;
+    margin-top: 3%;
+    background-color: white;
+}
