--- a/src/Component/Common/button.css
+++ b/src/Component/Common/button.css
@@ -8,7 +8,9 @@
     margin-top: 0px;
 }
 .staticButtonSize{
-    width: 600px
+    @media(min-width: 768px){
+        width: 600px;
+    }
 }
 .imageSize{
     width: 90px;
